login işlemleri yapıldı

--- a/otelim/otelim.csproj
+++ b/otelim/otelim.csproj
@@ -75,10 +75,10 @@
     <Content Include="Kategori\Delete.aspx" />
     <Content Include="Kategori\Edit.aspx" />
     <Content Include="Kategori\Index.aspx" />
+    <Content Include="Login\Index.aspx" />
     <Content Include="OtelResimler\Create.aspx" />
     <Content Include="OtelResimler\Delete.aspx" />
     <Content Include="OtelResimler\Edit.aspx" />
-    <Content Include="OtelResimler\Index.aspx" />
     <Content Include="Ozellik\Create.aspx" />
     <Content Include="Ozellik\Delete.aspx" />
     <Content Include="Ozellik\Edit.aspx" />
@@ -147,6 +147,13 @@
     <Compile Include="Kategori\Index.aspx.designer.cs">
       <DependentUpon>Index.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Login\Index.aspx.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login\Index.aspx.designer.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+    </Compile>
     <Compile Include="OtelResimler\Create.aspx.cs">
       <DependentUpon>Create.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -167,13 +174,6 @@
     </Compile>
     <Compile Include="OtelResimler\Edit.aspx.designer.cs">
       <DependentUpon>Edit.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="OtelResimler\Index.aspx.cs">
-      <DependentUpon>Index.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="OtelResimler\Index.aspx.designer.cs">
-      <DependentUpon>Index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Ozellik\Create.aspx.cs">
       <DependentUpon>Create.aspx</DependentUpon>
